--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </article>
         <article class="card">
           <h3>Conversion Pod</h3>
-          <img src="assets/images/lab-scale.png" alt="Lab-Scale Biofuel Converter">
+          <img src="assets/images/lab-scale.png" alt="Lab-scale Biofuel Converter">
           <p>Patented technology for efficient biodiesel conversion from waste cooking oil.</p>
         </article>
         <article class="card">
