--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p>Monetize the unused waste cooking oil.</p>
         </article>
         <article class="card">
-          <h3>Conversion Pod</h3>
+          <h3>Lab-scale Biofuel Converter</h3>
           <img src="assets/images/lab-scale.png" alt="Lab-scale Biofuel Converter">
           <p>Patented technology for efficient biodiesel conversion from waste cooking oil.</p>
         </article>
