--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <a class="btn-primary" href="https://bioenergyarabia.geovartha.id/home/" target="_blank" rel="noopener noreferrer">
           Benefit Calculator
         </a>
+        <a class="btn-primary" href="https://www.bioenergyarabia.com/contact.html" target="_blank" rel="noopener noreferrer">
+          Book a Meeting
+        </a>
       </div>
 
       <!-- <p class="small">Replace images in <code>assets/images/</code> anytime.</p>
