--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
             <span class="btn-icon">🧮</span>
             <span class="btn-text">Benefit Calculator</span>
           </a>
-          <a class="floating-btn demo" href="https://www.bioenergyarabia.com/contact.html" target="_blank" rel="noopener noreferrer" title="Schedule a product demonstration">
+            <a class="floating-btn demo" href="#contact-us" title="Schedule a product demonstration">
             <span class="btn-icon">📋</span>
             <span class="btn-text">Request a Demo</span>
-          </a>
+            </a>
         </div>
       </div>
 
