--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
               </div> -->
               <div class="contact-item">
                 <strong>📍 Location:</strong>
-                <p><a href="https://maps.app.goo.gl/dxcQ3RUfq7hLnX9U8" target="_blank" rel="noopener noreferrer">Dhahran Techno Valley<br>Dhahran, Saudi Arabia</a></p>
+                <p> KFUPM Innovation Cluster Building at Dhahran Techno Valley<br>Dhahran, Saudi Arabia</a></p>
               </div>
             </div>
 
             <!-- Embedded Google Map -->
             <div class="contact-map">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4438.300480051401!2d50.159405099999994!3d26.303151499999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49e64ba7c5098b%3A0x44673b50d1476087!2sDhahran%20Techno%20Valley!5e1!3m2!1sen!2ssa!4v1765629484606!5m2!1sen!2ssa" 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.4118631263057!2d50.15887556282886!3d26.301318368282764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e49e65baaaaaaab%3A0x887102b0fec5c886!2sKFUPM%20Innovation%20Cluster%20Building%20at%20DTV!5e1!3m2!1sen!2ssa!4v1765631941371!5m2!1sen!2ssa" 
                 width="100%" 
                 height="100%" 
                 style="border:0; border-radius:8px;" 
