final fix header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="site-header"></div>
   <main>
     <div class="container">
-      <section class="hero">
+      <section id="home" class="hero">
         <img src="assets/images/Banner.png" alt="Reimagining Waste, Redefining Energy - Bioenergy Arabia">
       </section>
 
@@ -269,7 +269,7 @@
       </section>
 
       <!-- Contact Section -->
-      <section class="contact-section">
+      <section id="contact-us" class="contact-section">
         <h2 class="contact-title">CONTACT US</h2>
         <div class="contact-grid">
           <!-- Contact Info -->
