--- a/index.html
+++ b/index.html
@@ -357,15 +357,16 @@
         <button class="floating-toggle" onclick="toggleFloatingMenu()" title="Quick Actions">
           <span class="toggle-icon">📞</span>
         </button>
+        <span class="floating-label">Quick Contact</span>
         <div class="floating-menu">
           <a class="floating-btn calculator" href="https://bioenergyarabia.geovartha.id/home/" target="_blank" rel="noopener noreferrer" title="Calculate your potential savings">
             <span class="btn-icon">🧮</span>
             <span class="btn-text">Benefit Calculator</span>
           </a>
-            <a class="floating-btn demo" href="#contact-us" title="Schedule a product demonstration">
+          <a class="floating-btn demo" href="https://www.bioenergyarabia.com/contact.html" target="_blank" rel="noopener noreferrer" title="Schedule a product demonstration">
             <span class="btn-icon">📋</span>
             <span class="btn-text">Request a Demo</span>
-            </a>
+          </a>
         </div>
       </div>
 
