--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <p class="founder-name"><strong>Nur Allif Fathurrahman</strong><br>Founder</p>
             </div>
             <div class="founder-image">
-              <img src="assets/images/Nur Allif_Thobe.png" alt="Nur Allif Fathurrahman - Founder">
+              <img src="assets/images/Nur Allif - Thobe.png" alt="Nur Allif Fathurrahman - Founder">
             </div>
           </div>
         </div>
@@ -363,7 +363,7 @@
             <span class="btn-icon">🧮</span>
             <span class="btn-text">Benefit Calculator</span>
           </a>
-          <a class="floating-btn demo" href="https://www.bioenergyarabia.com/contact.html" target="_blank" rel="noopener noreferrer" title="Schedule a product demonstration">
+          <a class="floating-btn demo" href="#contact-us" title="Schedule a product demonstration">
             <span class="btn-icon">📋</span>
             <span class="btn-text">Request a Demo</span>
           </a>
