add some stuffs

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       <!-- Our Products Section -->
       <section id="our-products" class="products-section">
-        <h2 class="products-title">OUR PRODUCTS</h2>
+        <h2 class="products-title">PRODUCTS AND SERVICES</h2>
         <div class="products-slideshow">
           <div class="product-slides">
             <!-- Biodiesel Slide -->
@@ -138,6 +138,30 @@
                 </div>
               </div>
             </div>
+
+            <!-- Dashboard Slide -->
+            <div class="product-slide">
+              <div class="product-card">
+                <div class="product-image">
+                  <img src="assets/images/dashboard-1.png" alt="Sustainability & Compliance Management Platform">
+                </div>
+                <div class="product-content">
+                  <h3 class="product-name">SUSTAINABILITY & COMPLIANCE MANAGEMENT PLATFORM</h3>
+                  <ul class="product-features">
+                    <li><strong>Track biodiesel supply</strong> with full batch traceability.</li>
+                    <li><strong>Quantify CO₂e reductions</strong> using verified methodologies.</li>
+                    <li><strong>Monitor ESG performance</strong> in real time.</li>
+                    <li><strong>Manage certification workflows</strong> across sustainability schemes.</li>
+                    <li><strong>Access audit-ready documentation</strong> on demand.</li>
+                  </ul>
+                  <p class="product-quote">"Renewable fuel, traceable by source, measurable in emission reduction."</p>
+                  <a href="https://bioenergyarabia.geovartha.id/" target="_blank" rel="noopener noreferrer" class="product-cta">
+                    <span>Sample Platform</span>
+                    <span class="cta-arrow">→</span>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!-- Navigation Controls -->
@@ -148,6 +172,7 @@
           <div class="slide-dots">
             <span class="dot active" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
           </div>
         </div>
       </section>
