--- a/index.html
+++ b/index.html
@@ -369,6 +369,10 @@
                     <img src="assets/gallery/picture/Winner 2.JPG" alt="Winner">
                     <div class="gallery-overlay"><span>🔍</span></div>
                   </div>
+                  <div class="gallery-item" onclick="openLightbox('assets/gallery/picture/IDF 3.png')">
+                    <img src="assets/gallery/picture/IDF 3.png" alt="IDF Event">
+                    <div class="gallery-overlay"><span>🔍</span></div>
+                  </div>
                 </div>
               </div>
             </div>
