--- a/index.html
+++ b/index.html
@@ -550,6 +550,39 @@
       const header = document.getElementById('mainHeader');
       if (!header) return;
 
+      // Mobile nav: bind hamburger toggle after header is injected
+      const hamburger = document.getElementById('hamburger');
+      const navMenu = document.getElementById('navMenu');
+      if (hamburger && navMenu) {
+        const closeMenu = () => {
+          hamburger.classList.remove('active');
+          navMenu.classList.remove('active');
+          document.body.style.overflow = 'auto';
+          hamburger.setAttribute('aria-expanded', 'false');
+        };
+
+        hamburger.addEventListener('click', (e) => {
+          e.stopPropagation();
+          const willOpen = !navMenu.classList.contains('active');
+          hamburger.classList.toggle('active');
+          navMenu.classList.toggle('active');
+          document.body.style.overflow = willOpen ? 'hidden' : 'auto';
+          hamburger.setAttribute('aria-expanded', willOpen ? 'true' : 'false');
+        });
+
+        // Close on link click
+        navMenu.querySelectorAll('a').forEach(a => {
+          a.addEventListener('click', closeMenu);
+        });
+
+        // Close when clicking outside
+        document.addEventListener('click', (e) => {
+          if (navMenu.classList.contains('active') && !navMenu.contains(e.target) && !hamburger.contains(e.target)) {
+            closeMenu();
+          }
+        });
+      }
+
       const setHeaderHeightVar = () => {
         document.documentElement.style.setProperty('--header-height', header.offsetHeight + 'px');
       };
