--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <img src="assets/images/Helen_Abaya.png" alt="Anisa Helena Isma Putri">
               </div>
               <h3 class="member-name">Anisa Helena Isma Putri</h3>
-              <p class="member-role">Chief Technical Officer</p>
+              <p class="member-role">Chief Technology Officer</p>
               <p class="member-bio">Ph.D. in Chemical Engineering KFUPM</p>
             </a>
           </div>
@@ -286,7 +286,7 @@
                 <img src="assets/images/Izzul_Thobe.png" alt="Izzul Qudsi">
               </div>
               <h3 class="member-name">Izzul Qudsi</h3>
-              <p class="member-role">Chief Technology Officer</p>
+              <p class="member-role">Chief Technology Innovation Officer</p>
               <p class="member-bio">Ph.D. in Geology KFUPM</p>
             </a>
           </div>
